2002-12-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Options): Some English nits from Eric Siegerman.
	(Sources): Rewrite the introduction and move the example to ...
	(Built sources example): ... this separate node.

	* tests/depcomp2.test: Pass CC='gcc' as an argument to ./configure
	not in the environment.  Otherwise the test will fail when
	run with ksh and VERBOSE=x.
	Reported by Paul Jarc.

	* tests/man2.test: Exercize `make uninstall', to test
	the previous change.

2002-12-03  Nicolas Joly  <njoly@pasteur.fr>

	* lib/am/mans.am (uninstall-man%SECTION%): Change the extension of
	the man pages being uninstalled, if needed.

2002-12-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (macro_define): Do not strip escaped new lines
	in Automake's +='ed variables.  We don't know whether it will
	be pretty printed or not at this point.
	(variable_pretty_output): Do this here.
	* tests/pluseq10.test: New file.
	* tests/Makefile.am (TESTS): Add pluseq10.test.
	Reported by Ralf Corsepius.

2002-12-02  Charles Wilson  <cwilson@ece.gatech.edu>

	* tests/gnits3.test (AM_INSTALLCHECK_STD_OPTIONS_EXEMPT):
	Append $(EXEEXT) again.

2002-12-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Sources): Illustrate $(BUILT_SOURCES) with an
	example.

	* automake.texi (Options): Programs listed in
	AM_INSTALLCHECK_STD_OPTIONS_EXEMPT should have $(EXEEXT) appended.
	* tests/gnits3.test (AM_INSTALLCHECK_STD_OPTIONS_EXEMPT):
	Append $(EXEEXT).
	Reported by Charles Wilson.

2002-12-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in, NEWS: Bump version to 1.7.1c.

	* configure.in, NEWS: Bump version to 1.7.1b.

	* automake.in (lang_c_finish): Do not fill de_ansi_files with
	subdirectory informations for %libsources files.  A LIBOBJS source
	is always in the current directory.  This reverts part of a change
	from 2002-01-13.
	* tests/ansi10.test: New file.
	* tests/Makefile.am (TESTS): Add ansi10.test.
