@@ -1,5 +1,10 @@
 2002-12-04  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (handle_languages): Test $objdir, not $srcdir, to
+	decides whether a _.c file is in a subdirectory and has to be
+	cleaned separately.
+	Reported by Kevin Ryde.
+
 	* automake.texi (Options): Some English nits from Eric Siegerman.
 	(Sources): Rewrite the introduction and move the example to ...
 	(Built sources example): ... this separate node.
